<?xml version="1.0"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.lernejo</groupId>
    <artifactId>korekto-java-basics-grader</artifactId>
    <version>0.0.1-SNAPSHOT</version>

    <name>Korekto-Java-Basics-Grader</name>
    <description>Korekto grader for Java basics exercise</description>
    <url>https://github.com/lernejo/korekto-java-basics-grader</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>

        <korekto-toolkit.version>1.4.3</korekto-toolkit.version>
        <logback-classic.version>1.5.11</logback-classic.version>
        <slf4j.version>2.0.16</slf4j.version>

        <junit.version>5.11.2</junit.version>
        <assertj.version>3.26.3</assertj.version>

        <exec-maven-plugin.version>3.4.1</exec-maven-plugin.version>
        <jacoco-maven-plugin.version>0.8.12</jacoco-maven-plugin.version>
    </properties>

    <scm>
        <url>https://github.com/lernejo/korekto-java-basics-grader.git</url>
        <connection>scm:git:ssh://git@github.com/lernejo/korekto-java-basics-grader.git</connection>
        <developerConnection>scm:git:ssh://git@github.com/lernejo/korekto-java-basics-grader.git</developerConnection>
        <tag>HEAD</tag>
    </scm>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>ledoyen</id>
            <name>Loïc Ledoyen</name>
            <url>https://github.com/ledoyen</url>
            <email>ledoyen.loic@gmail.com</email>
        </developer>
    </developers>

    <dependencies>
        <dependency>
            <groupId>com.github.lernejo</groupId>
            <artifactId>korekto-toolkit</artifactId>
            <version>${korekto-toolkit.version}</version>
        </dependency>

        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback-classic.version}</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertj.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.5.1</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>${exec-maven-plugin.version}</version>
                <configuration>
                    <mainClass>com.github.lernejo.korekto.toolkit.launcher.GradingJobLauncher</mainClass>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco-maven-plugin.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>
</project>
